5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4000/executions/1671_1105.log
== TEST (2019-04-24 15:10:02) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
n = input("Descricao do brasao: ")
print("Entrada:", n)
if(n== lobo):
	print("Casa:", "Stark")
elif(n== leao):
	print("Casa:", "Lannister")
elif(n== veado):
	print("Casa:", "Baratheon")
elif(n== dragao):
	print("Casa:", "Targaryen")
elif(n== rosa):
	print("Casa:", "Tyrell")
elif(n== sol):
	print("Casa:", "Martell")
elif(n== lula):
	print("Casa:", "Greyjoy")
elif(n== esfolado):
	print("Casa:", "Bolton")
elif(n== turta):
	print("Casa:", "Tully")
else:
	print("Brasao inavalido")
	

	
	
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    if(n== lobo):
NameError: name 'lobo' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-24 15:10:03) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
n = input("Descricao do brasao: ")
print("Entrada:", n)
if(n== lobo):
	print("Casa:", "Stark")
elif(n== leao):
	print("Casa:", "Lannister")
elif(n== veado):
	print("Casa:", "Baratheon")
elif(n== dragao):
	print("Casa:", "Targaryen")
elif(n== rosa):
	print("Casa:", "Tyrell")
elif(n== sol):
	print("Casa:", "Martell")
elif(n== lula):
	print("Casa:", "Greyjoy")
elif(n== esfolado):
	print("Casa:", "Bolton")
elif(n== turta):
	print("Casa:", "Tully")
else:
	print("Brasao inavalido")
	

	
	
	

-- EXECUTION TIME:
0.137086
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1671/1105/main.py", line 5, in <module>
    if(n== lobo):
NameError: name 'lobo' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 15:10:05) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
n = input("Descricao do brasao: ")
print("Entrada:", n)
if(n== lobo):
	print("Casa:", "Stark")
elif(n== leao):
	print("Casa:", "Lannister")
elif(n== veado):
	print("Casa:", "Baratheon")
elif(n== dragao):
	print("Casa:", "Targaryen")
elif(n== rosa):
	print("Casa:", "Tyrell")
elif(n== sol):
	print("Casa:", "Martell")
elif(n== lula):
	print("Casa:", "Greyjoy")
elif(n== esfolado):
	print("Casa:", "Bolton")
elif(n== turta):
	print("Casa:", "Tully")
else:
	print("Brasao inavalido")
	

	
	
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    if(n== lobo):
NameError: name 'lobo' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 15:11:12) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
n = input("Descricao do brasao: ")
print("Entrada:", n)
if(n== "lobo"):
	print("Casa:", "Stark")
elif(n== "leao"):
	print("Casa:", "Lannister")
elif(n== "veado"):
	print("Casa:", "Baratheon")
elif(n== "dragao"):
	print("Casa:", "Targaryen")
elif(n== "rosa"):
	print("Casa:", "Tyrell")
elif(n== "sol"):
	print("Casa:", "Martell")
elif(n== "lula"):
	print("Casa:", "Greyjoy")
elif(n== "esfolado"):
	print("Casa:", "Bolton")
elif(n== "turta"):
	print("Casa:", "Tully")
else:
	print("Brasao inavalido")
	

	
	
	

-- OUTPUT:
Entrada: lula
Casa: Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-24 15:11:17) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
n = input("Descricao do brasao: ")
print("Entrada:", n)
if(n== "lobo"):
	print("Casa:", "Stark")
elif(n== "leao"):
	print("Casa:", "Lannister")
elif(n== "veado"):
	print("Casa:", "Baratheon")
elif(n== "dragao"):
	print("Casa:", "Targaryen")
elif(n== "rosa"):
	print("Casa:", "Tyrell")
elif(n== "sol"):
	print("Casa:", "Martell")
elif(n== "lula"):
	print("Casa:", "Greyjoy")
elif(n== "esfolado"):
	print("Casa:", "Bolton")
elif(n== "turta"):
	print("Casa:", "Tully")
else:
	print("Brasao inavalido")
	

	
	
	

-- EXECUTION TIME:
0.196932
-- TEST CASE 1:
---- input:
lula
---- correct output:
Entrada: lula
Casa: Greyjoy
---- user output:
Entrada: lula
Casa: Greyjoy
-- TEST CASE 2:
---- input:
tambaqui
---- correct output:
Entrada: tambaqui
Brasao invalido
---- user output:
Entrada: tambaqui
Brasao inavalido
-- TEST CASE 3:
---- input:
dragao
---- correct output:
Entrada: dragao
Casa: Targaryen
---- user output:
Entrada: dragao
Casa: Targaryen
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 15:11:31) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
n = input("Descricao do brasao: ")
print("Entrada:", n)
if(n== "lobo"):
	print("Casa:", "Stark")
elif(n== "leao"):
	print("Casa:", "Lannister")
elif(n== "veado"):
	print("Casa:", "Baratheon")
elif(n== "dragao"):
	print("Casa:", "Targaryen")
elif(n== "rosa"):
	print("Casa:", "Tyrell")
elif(n== "sol"):
	print("Casa:", "Martell")
elif(n== "lula"):
	print("Casa:", "Greyjoy")
elif(n== "esfolado"):
	print("Casa:", "Bolton")
elif(n== "turta"):
	print("Casa:", "Tully")
else:
	print("Brasao inavalido")
	

	
	
	

-- OUTPUT:
Entrada: lula
Casa: Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 15:11:56) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
n = input("Descricao do brasao: ")
print("Entrada:", n)
if(n== "lobo"):
	print("Casa:", "Stark")
elif(n== "leao"):
	print("Casa:", "Lannister")
elif(n== "veado"):
	print("Casa:", "Baratheon")
elif(n== "dragao"):
	print("Casa:", "Targaryen")
elif(n== "rosa"):
	print("Casa:", "Tyrell")
elif(n== "sol"):
	print("Casa:", "Martell")
elif(n== "lula"):
	print("Casa:", "Greyjoy")
elif(n== "esfolado"):
	print("Casa:", "Bolton")
elif(n== "turta"):
	print("Casa:", "Tully")
else:
	print("Brasao inavalido")
	

	
	
	

-- OUTPUT:
Entrada: lula
Casa: Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-24 15:11:58) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
n = input("Descricao do brasao: ")
print("Entrada:", n)
if(n== "lobo"):
	print("Casa:", "Stark")
elif(n== "leao"):
	print("Casa:", "Lannister")
elif(n== "veado"):
	print("Casa:", "Baratheon")
elif(n== "dragao"):
	print("Casa:", "Targaryen")
elif(n== "rosa"):
	print("Casa:", "Tyrell")
elif(n== "sol"):
	print("Casa:", "Martell")
elif(n== "lula"):
	print("Casa:", "Greyjoy")
elif(n== "esfolado"):
	print("Casa:", "Bolton")
elif(n== "turta"):
	print("Casa:", "Tully")
else:
	print("Brasao inavalido")
	

	
	
	

-- EXECUTION TIME:
0.225913
-- TEST CASE 1:
---- input:
lula
---- correct output:
Entrada: lula
Casa: Greyjoy
---- user output:
Entrada: lula
Casa: Greyjoy
-- TEST CASE 2:
---- input:
tambaqui
---- correct output:
Entrada: tambaqui
Brasao invalido
---- user output:
Entrada: tambaqui
Brasao inavalido
-- TEST CASE 3:
---- input:
dragao
---- correct output:
Entrada: dragao
Casa: Targaryen
---- user output:
Entrada: dragao
Casa: Targaryen
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 15:12:02) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
n = input("Descricao do brasao: ")
print("Entrada:", n)
if(n== "lobo"):
	print("Casa:", "Stark")
elif(n== "leao"):
	print("Casa:", "Lannister")
elif(n== "veado"):
	print("Casa:", "Baratheon")
elif(n== "dragao"):
	print("Casa:", "Targaryen")
elif(n== "rosa"):
	print("Casa:", "Tyrell")
elif(n== "sol"):
	print("Casa:", "Martell")
elif(n== "lula"):
	print("Casa:", "Greyjoy")
elif(n== "esfolado"):
	print("Casa:", "Bolton")
elif(n== "turta"):
	print("Casa:", "Tully")
else:
	print("Brasao inavalido")
	

	
	
	

-- OUTPUT:
Entrada: lula
Casa: Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 15:12:14) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
n = input("Descricao do brasao: ")
print("Entrada:", n)
if(n== "lobo"):
	print("Casa:", "Stark")
elif(n== "leao"):
	print("Casa:", "Lannister")
elif(n== "veado"):
	print("Casa:", "Baratheon")
elif(n== "dragao"):
	print("Casa:", "Targaryen")
elif(n== "rosa"):
	print("Casa:", "Tyrell")
elif(n== "sol"):
	print("Casa:", "Martell")
elif(n== "lula"):
	print("Casa:", "Greyjoy")
elif(n== "esfolado"):
	print("Casa:", "Bolton")
elif(n== "turta"):
	print("Casa:", "Tully")
else:
	print("Brasao invalido")
	

	
	
	

-- OUTPUT:
Entrada: lula
Casa: Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-24 15:12:16) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
n = input("Descricao do brasao: ")
print("Entrada:", n)
if(n== "lobo"):
	print("Casa:", "Stark")
elif(n== "leao"):
	print("Casa:", "Lannister")
elif(n== "veado"):
	print("Casa:", "Baratheon")
elif(n== "dragao"):
	print("Casa:", "Targaryen")
elif(n== "rosa"):
	print("Casa:", "Tyrell")
elif(n== "sol"):
	print("Casa:", "Martell")
elif(n== "lula"):
	print("Casa:", "Greyjoy")
elif(n== "esfolado"):
	print("Casa:", "Bolton")
elif(n== "turta"):
	print("Casa:", "Tully")
else:
	print("Brasao invalido")
	

	
	
	

-- EXECUTION TIME:
0.146061
-- TEST CASE 1:
---- input:
lula
---- correct output:
Entrada: lula
Casa: Greyjoy
---- user output:
Entrada: lula
Casa: Greyjoy
-- TEST CASE 2:
---- input:
tambaqui
---- correct output:
Entrada: tambaqui
Brasao invalido
---- user output:
Entrada: tambaqui
Brasao invalido
-- TEST CASE 3:
---- input:
dragao
---- correct output:
Entrada: dragao
Casa: Targaryen
---- user output:
Entrada: dragao
Casa: Targaryen
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
